# compute-shader

./: Cargo.toml  README.md
examples/: generate-cave.rs  matrix-multiply.rs
src/: buffer.rs  device.rs  error.rs  event.rs  image.rs  instance.rs  lib.rs  profile_event.rs  program.rs  queue.rs  sync_event.rs  texture.rs
src/api/cl/: buffer.rs  device.rs  event.rs  ffi.rs  image.rs  instance.rs  mod.rs  profile_event.rs  program.rs  queue.rs  sync_event.rs  texture.rs
src/api/gl/: buffer.rs  device.rs  event.rs  image.rs  instance.rs  mod.rs  profile_event.rs  program.rs  queue.rs  sync_event.rs  texture.rs
