[package]
name = "compute-shader"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
license = "MIT / Apache-2.0"

[dependencies]
euclid = "0.10"
gl = "0.6"
libc = "0.2"

[dev-dependencies]
byteorder = "1"
rand = "0.3"

[dev-dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dev-dependencies.lord-drawquaad]
git = "https://github.com/pcwalton/lord-drawquaad.git"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.2"

[target.'cfg(target_os = "macos")'.dependencies.io-surface]
git = "https://github.com/pcwalton/rust-io-surface.git"
branch = "more-formats"

